# news-bot

./: README.md  pyproject.toml
src/app/: main.py  settings.py  utils.py
src/app/sources/newsapi/: models.py  newsapi.py  settings.py
