[project]
name = "news-bot"
version = "0.1.0"
description = "An AI-powered news summarizer and notifier for Telegram"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.4",
    "httpx>=0.27.2",
    "isort>=5.13.2",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "ruff>=0.7.3",
]
